manifests/freescout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freescout
  namespace: homelab
spec:
  selector:
    app: freescout
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
